tests/suppress_traces/suppress_traces.exp
Error -------------------------------------------------------------------------------------------------- traces.js:15:17

Cannot assign `foo(...)` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   traces.js:15:17
   15| var a: string = foo('hi'); // error number ~> string
                       ^^^^^^^^^

References:
   traces.js:9:17
    9| function bar(): number { return 5; }
                       ^^^^^^ [1]
   traces.js:15:8
   15| var a: string = foo('hi'); // error number ~> string
              ^^^^^^ [2]

Trace:
* path 1:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ NumT [number]
 15: var a: string = foo('hi'); // error number ~> string
            ^^^^^^ ~> UseT(AssignVar, StrT) [string] (from path 2)
* path 2:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ OpenT [call of `foo`]
 15: var a: string = foo('hi'); // error number ~> string
         ^ ~> UseT(AssignVar, OpenT) [`a`]


Warning -------------------------------------------------------------------------------------------------- traces.js:8:1

Unused suppression comment.

   8| // $FlowFixMe - Error unused suppression
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 1 error and 1 warning
